fix: tweak spacing for payment form

--- a/src/modal-checkout/checkout.scss
+++ b/src/modal-checkout/checkout.scss
@@ -120,6 +120,9 @@
 				margin-right: 8px;
 			}
 		}
+		.wc-payment-form {
+			margin: 16px 0 0;
+		}
 		.newspack-cover-fees,
 		.woocommerce-SavedPaymentMethods-saveNew {
 			display: flex;
